--- a/march-update/css/main.scss
+++ b/march-update/css/main.scss
@@ -297,7 +297,8 @@ main{
 }
 
 
-#home-menu{
+#home-menu, 
+#resources-menu{
   padding-top: 1em;
   li{
     display: block;
@@ -2093,7 +2094,8 @@ button{
   justify-content: space-around;
 }
 
-#home-menu{
+#home-menu, 
+#resources-menu{
   width: 40%;
   padding-left: 2.5%;
   padding-top: 0;
