--- a/march-update/css/main.css
+++ b/march-update/css/main.css
@@ -1619,6 +1619,58 @@ body {
   color: #E71D36; }
 
 /* ==========================================================================
+    Email segmenting redirects
+   ========================================================================== */
+.email-redirect header {
+  background: url(../img/aleia-walker-email-header.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: 600px;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center; }
+  .email-redirect header p {
+    font-family: 'NarzissRegular-Drops';
+    text-transform: uppercase;
+    font-size: 5rem;
+    line-height: 3;
+    color: #2EC4B6; }
+.email-redirect .before-ul {
+  margin: 2rem 0 1.5rem 0; }
+.email-redirect ul {
+  margin-bottom: 2rem; }
+  .email-redirect ul li {
+    display: block;
+    font-size: 1.25rem;
+    line-height: 1.75; }
+.email-redirect section {
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 2.5%; }
+  .email-redirect section p {
+    font-size: 1.25rem;
+    line-height: 1.75; }
+  .email-redirect section div {
+    margin: 5% 0;
+    max-width: 960px; }
+.email-redirect .emphasis {
+  text-transform: uppercase;
+  margin-top: 1rem;
+  font-size: 1.5rem; }
+.email-redirect footer {
+  background-color: #011627;
+  color: white;
+  display: flex;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  padding: .75em 0; }
+
+/* ==========================================================================
    Helper classes
    ========================================================================== */
 /*
